--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h1>hello</h1>
+    <ol>
+        <li><a href="recipes/lasagna/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/fruit-salad/fruit-salad.html">Fruit Salad</a></li>
+        <li><a href="recipes/ice/ice.html">Ice</a></li>
+    </ol>
+
+    
+    
 </body>
 </html>
