--- a/recipes/fruit-salad/fruit-salad.html
+++ b/recipes/fruit-salad/fruit-salad.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles.css">
     <title>Fruit Salad</title>
   </head>
   <body>
@@ -33,5 +34,7 @@
       <li>Pour all fruit into bowl, including fruit you haven't cut</li>
       <li>Mix and stir</li>
     </ol>
+    <br>
+    <p class="bold"><a href="../../index.html">Back</a></p>
   </body>
 </html>
