--- a/recipes/ice/ice.html
+++ b/recipes/ice/ice.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../styles.css">
     <title>Ice</title>
 </head>
 <body>
@@ -26,5 +27,9 @@
         <li>When ready, remove ice bag from freezer and remove the amount of ice cubes desired</li>
         <li>Put ice cubs into drinking cup or glass</li>
     </ol>
+    <br>
+    <p class="bold"><a href="../../index.html">Back</a></p>
 </body>
 </html>
+
+<!-- hilton3d.github.io/odin-recipes -->
