--- a/recipes/lasagna/lasagna.html
+++ b/recipes/lasagna/lasagna.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles.css">
     <title>Lasagna</title>
   </head>
   <body>
@@ -32,5 +33,7 @@
       <li>Put cheese, meat, pasta, and tomato sauce into frying pan</li>
       <li>Fry for 15 to 20 minutes</li>
     </ol>
+    <br>
+    <p class="bold"><a href="../../index.html">Back</a></p>
   </body>
 </html>
