--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Odin Recipes</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
     <ol>
-        <li><a href="recipes/lasagna/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/fruit-salad/fruit-salad.html">Fruit Salad</a></li>
-        <li><a href="recipes/ice/ice.html">Ice</a></li>
+      <li><a href="recipes/lasagna/lasagna.html">Lasagna</a></li>
+      <li><a href="recipes/fruit-salad/fruit-salad.html">Fruit Salad</a></li>
+      <li><a href="recipes/ice/ice.html">Ice</a></li>
     </ol>
-
-    
-    
-</body>
+  </body>
 </html>
